--- a/index.html
+++ b/index.html
@@ -82,13 +82,19 @@
         <div class="col-lg-5">
           <h2> شنيه<span> أحمي؟</span> </h2>
           <video width="450" height="315" controls="true">
-            <source src="img/AHMI720.mp4" type="video/mp4" />
+            <source src="resources/AHMI720.mp4" type="video/mp4" />
           </video>
-        
-        <div class="dnt_st_item ">
-            <a onclick="myFunction()" href="#">
-            <img class="store_img" alt="Google Play button " src="img/google_play.png"></a>
+
+          <div class="row">
+            <div class="dnt_st_item col">
+              <a onclick="myFunction()" href="#">
+              <img class="store_img" alt="Google Play button " src="img/google_play.png"></a>
+            </div>
+            <div class="col">
+              <a href="resources/whitepaper.pdf" class="btn btn-danger tombol">Livre blanc</a>
+            </div>
           </div>
+          
         </div>
       </div>
       <!-- akhir Workingspace -->
