--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <i> <img class="facebook-mail-icon" src="img/facebook-icon.jpg" alt="Facebook"> </i>
               </a>
               <!--Mail -->
-              <a href="ahmicovid@gmail.com">
+              <a title="ahmicovid@gmail.com" href="#">
                 <i> <img class="facebook-mail-icon" src="img/mail-icon.png" alt="Mail"> </i>
               </a>
             </div>
