--- a/index.html
+++ b/index.html
@@ -99,6 +99,29 @@
       </div>
       <!-- akhir Workingspace -->
 
+      <!-- Testimonial -->
+      <section class="testimonial">
+        <div class="row justify-content-center">
+          <div class="col-lg-8">
+            <p>"مع بعضنا نرجعو خير من قبل"</p>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-lg-6 justify-content-center d-flex">
+            <img src="img/img1.jpg" class="member" alt="Testimonial 1" class="img-main" title="Mohamed Hammi">
+            <img src="img/img2.jpg" class="member" alt="Testimonial 2" class="img-main" title="Iheb Farhani">
+            <img src="img/img3.jpg" class="member" alt="Testimonial 3" class="img-main" title="Zied Said">
+            <img src="img/img4.jpg" class="member" alt="Testimonial 4" class="img-main" title="Oussama Yousfi">
+            <img src="img/img5.jpg" class="member" alt="Testimonial 5" class="img-main" title="Ahmed Ben Mohamed">
+            <img src="img/img6.png" class="member" alt="Testimonial 6" class="img-main" title="Bilel Said">
+            <img src="img/img7.jpg" class="member" alt="Testimonial 7" class="img-main" title="Hedi Karray">
+          </div>
+        </div>
+      </br>
+        
+      </section>
+      <!-- akhir Testimonial -->
+
     </div>
     <!-- akhir container -->
     <!-- Footer -->
