fix members photos

--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@
         </div>
         <div class="row justify-content-center">
           <div class="col-lg-6 justify-content-center d-flex">
-            <img src="img/img1.jpg" class="member" alt="Testimonial 1" class="img-main" title="Mohamed Hammi">
-            <img src="img/img2.jpg" class="member" alt="Testimonial 2" class="img-main" title="Iheb Farhani">
-            <img src="img/img3.jpg" class="member" alt="Testimonial 3" class="img-main" title="Zied Said">
-            <img src="img/img4.jpg" class="member" alt="Testimonial 4" class="img-main" title="Oussama Yousfi">
-            <img src="img/img5.jpg" class="member" alt="Testimonial 5" class="img-main" title="Ahmed Ben Mohamed">
-            <img src="img/img6.png" class="member" alt="Testimonial 6" class="img-main" title="Bilel Said">
-            <img src="img/img7.jpg" class="member" alt="Testimonial 7" class="img-main" title="Hedi Karray">
+            <img src="img/img1.jpg" alt="Testimonial 1" class="img-main" title="Mohamed Hammi">
+            <img src="img/img2.jpg" alt="Testimonial 2" class="img-main" title="Iheb Farhani">
+            <img src="img/img3.jpg" alt="Testimonial 3" class="img-main" title="Zied Said">
+            <img src="img/img4.jpg" alt="Testimonial 4" class="img-main" title="Oussama Yousfi">
+            <img src="img/img5.jpg" alt="Testimonial 5" class="img-main" title="Ahmed Ben Mohamed">
+            <img src="img/img6.png" alt="Testimonial 6" class="img-main" title="Bilel Said">
+            <img src="img/img7.jpg" alt="Testimonial 7" class="img-main" title="Hedi Karray">
           </div>
         </div>
       </br>
