--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@
             <img src="img/img4.jpg" alt="Testimonial 4" class="img-main" title="Oussama Yousfi">
             <img src="img/img5.jpg" alt="Testimonial 5" class="img-main" title="Ahmed Ben Mohamed">
             <img src="img/img6.png" alt="Testimonial 6" class="img-main" title="Bilel Said">
-            <img src="img/img7.jpg" alt="Testimonial 7" class="img-main" title="Hedi Karray">
+            <img src="img/img7.jpg" alt="Testimonial 7" class="img-main" title="Anis Magdouli">
+            <img src="img/img8.jpg" alt="Testimonial 8" class="img-main" title="Hedi Karray">
           </div>
         </div>
       </br>
