change photos formats

--- a/index.html
+++ b/index.html
@@ -112,13 +112,17 @@
             <img src="img/img2.jpg" alt="Testimonial 2" class="img-main" title="Iheb Farhani">
             <img src="img/img3.jpg" alt="Testimonial 3" class="img-main" title="Zied Said">
             <img src="img/img4.jpg" alt="Testimonial 4" class="img-main" title="Oussama Yousfi">
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-lg-6 justify-content-center d-flex">
             <img src="img/img5.jpg" alt="Testimonial 5" class="img-main" title="Ahmed Ben Mohamed">
             <img src="img/img6.png" alt="Testimonial 6" class="img-main" title="Bilel Said">
             <img src="img/img7.jpg" alt="Testimonial 7" class="img-main" title="Anis Magdouli">
             <img src="img/img8.jpg" alt="Testimonial 8" class="img-main" title="Hedi Karray">
           </div>
         </div>
-      </br>
+      <br/>
         
       </section>
       <!-- akhir Testimonial -->
